lap1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: foo
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - image: dgkanatsios/simpleapp
        name: simpleapp
        ports:
        - containerPort: 8080
