lap1/deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: foo
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
