lap1/pod-env-from-cm2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
spec:
  containers:
    - name: nginx
      image: nginx
  restartPolicy: Never
