lap1/pod-env-from-cm3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx3
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: config-volume
        mountPath: /etc/lala
  volumes:
    - name: config-volume
      configMap:
        name: cmvolume
  restartPolicy: Never
