lap1/pod-quota.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-limit
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "256Mi"
        cpu: "100m"
      limits:
        memory: "512Mi"
        cpu: "200m"
