lap1/pod-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-sa
spec:
  serviceAccountName: myuser
  automountServiceAccountToken: false
  containers:
  - image: nginx
    name: nginx-sa
  restartPolicy: Never
