lap1/pod-secctx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-demo
spec:
  securityContext:
    runAsUser: 101
  containers:
  - name: nginx
    image: nginx
