lap1/pod-volume-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: secret-volume
        mountPath: /etc/foo
  volumes:
    - name: secret-volume
      secret:
        secretName: mysecret2
  restartPolicy: Never
