lap1/pod-volume-secret2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret2
spec:
  containers:
    - name: nginx
      image: nginx
  restartPolicy: Never
