lap1/pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx3
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - name: http
      containerPort: 80
      hostPort: 80
    readinessProbe:
      httpGet:
        path: /
        port: http
  dnsPolicy: ClusterFirst
  restartPolicy: Never
