lap1/sp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: bb1
    image: busybox
    command: ["sh"]
    args: ["-c", "sleep 3600"]
    volumeMounts:
    - name: dir
      mountPath: /etc/foo
  - name: bb2
    image: busybox
    command: ["sh"]
    args: ["-c", "sleep 3600"]
    volumeMounts:
    - name: dir
      mountPath: /etc/foo
  volumes:
  - name: dir
    emptyDir: {}
