lap1/sp-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: busybox
    name: busybox
    volumeMounts:
    - name: pv-storage
      mountPath: "/etc/foo"
  volumes:
  - name: pv-storage
    persistentVolumeClaim:
      claimName: mypvc
  dnsPolicy: ClusterFirst
  restartPolicy: Never
