lap1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
    app: foo
  ports:
  - protocol: TCP
    port: 6262
    targetPort: 8080
